--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,41 +1,7 @@
 <div class="container-fluid">
-  <div class="row bg justify-content-between home-bar" name="home-bar">
-    <div class="row col-sm-6 col-8 align-items-center h-100 m-0 pr-0">
-      <div class="col-4 pr-0 ml-3">
-        <a class="navbar-brand float-right text-white" href="<%= discover_user_path(content: "photo", id: @user.id) %>" ><%= I18n.t('brand') %></a>
-      </div>
-      <div class="col py-1 h-100 pr-0">
-        <input class="col h-100 rounded border-0" type="text" name="search-bar" placeholder="Search Photo / Album"/>
-      </div>
-    </div>
-    <nav class="navbar navbar-expand-sm row col-sm-6 col-4 m-0 p-0 justify-content-end">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#user-bar" aria-controls="user-bar" aria-expanded="false" aria-label="Toggle navigation">
-        <a class="nav-toggle-icon btn rounded-circle bg-white text-color border-0 px-2"><%= @user.avatar_name%></a>
-      </button>
-      <div class="collapse navbar-collapse" id="user-bar" style="z-index: 100">
-        <div class="navbar-nav col-12 justify-content-end align-items-center bg">
-          <div class="col-auto row navbar-nav">
-            <a href="<%= user_path(id: @user.id)%>" class="nav-item nav-link btn rounded-circle bg-white text-color border-0 px-2"><%= @user.avatar_name%></a>
-            <a href="<%= user_path(id: @user.id)%>" class="nav-item nav-link btn text-white border-0"><%= @user.name%></a>
-          </div>
-          <div class="col-3 navbar-nav">
-            <a class="nav-item nav-link btn text-white border-0" href="<%= login_path %>"><%= t ('logout') %></a>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </div>
+  <%= render "shared/homebar" %>
   <div class="row bg-grey">
-    <div class="col pt-4 align-items-center">
-      <div class="col pt-4 align-items-center">
-        <div class="row col ml-2">
-          <%= link_to I18n.t('feed'), feed_user_path( @user.id ), {class: "btn text-secondary"}%>
-        </div>
-        <div class="row col ml-2">
-          <%= link_to I18n.t('discover'), discover_user_path(content: "photo", id: @user.id), {class: "btn text-secondary"}%>
-        </div>
-      </div>
-    </div>
+    <%= render "shared/feed_discover"%>
     <div class="col-sm-9 col-12 p-3">
       <div class="col bg-white pb-3 mb-5">
         <div class="font-weight-bold border-bottom pt-4 pb-3 justify-content-between row mx-1" style="font-size:20px;">
