--- a/app/views/users/_block_album_tab.html.erb
+++ b/app/views/users/_block_album_tab.html.erb
@@ -16,7 +16,9 @@
         <%= image_tag photo.image.thumb.url, {class: "thumb-image img-fluid"} %>
         <%= image_tag photo.image.thumb.url, {class: "thumb-image img-fluid"} %>
       <% end %>
-      <%= link_to t('.edit_content'), edit_album_path(id: album.id), {class: "btn rounded-pill btn-sm edit font-size py-0 m-1 text-white"}%>
+      <% if (current_user.id.to_i == params.require(:id).to_i )%>
+        <%= link_to t('.edit_content'), edit_album_path(id: album.id), {class: "btn rounded-pill btn-sm edit font-size py-0 m-1 text-white"}%>
+      <% end %>
     </div>
     <div class="photo-count">
       <div class="content">
