--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -45,17 +45,21 @@
       <div class="col bg-white pb-3 mb-5">
         <div class="font-weight-bold border-bottom py-4" style="font-size:20px;"><%= t ('.header')%></div>
         <div class="row mb-5 justify-content-center">
-          <div class="row col-12">
-            <div class="col-4"></div>
-            <div class="col-8">
-              <div class="row mt-5 mb-3 position-relative col-sm-4 col-12 justify-content-center" name="profile-image">
-                <img src="https://scontent.fsgn2-1.fna.fbcdn.net/v/t1.0-9/116212777_2941769292612649_3417797964556573653_o.png?_nc_cat=107&_nc_sid=09cbfe&_nc_ohc=reSenZfdMa0AX_P62Vw&_nc_ht=scontent.fsgn2-1.fna&oh=b036e28f8182b447d68134f50e3e2fdd&oe=5F746402" alt="profile-image" class="img-fluid rounded"/>
-                <button type="button" name="change-profile" class="btn bg-white text-secondary change">CHANGE</button>
-              </div>
-            </div>
-          </div>
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "col-sm-8 col-12" }) do |f| %>
             <%= render "devise/shared/error_messages", resource: resource %>
+            <div class="row col-12">
+              <div class="col-3"></div>
+              <div class="col-9">
+                <div class="row mt-5 mb-3 position-relative col-sm-6 col-12 justify-content-center" name="profile-image">
+                  <% if current_user.avatar.file.nil?%>
+                    <img src="https://scontent.fsgn2-1.fna.fbcdn.net/v/t1.0-9/116212777_2941769292612649_3417797964556573653_o.png?_nc_cat=107&_nc_sid=09cbfe&_nc_ohc=reSenZfdMa0AX_P62Vw&_nc_ht=scontent.fsgn2-1.fna&oh=b036e28f8182b447d68134f50e3e2fdd&oe=5F746402" alt="profile-image" class="img-fluid rounded"/>
+                  <% else %>
+                    <%= image_tag current_user.avatar.thumb.url, {class: "img-fluid rounded"}%>
+                  <% end %>
+                  <%= f.file_field :avatar, {class: "btn bg-white text-secondary change"}%>
+                </div>
+              </div>
+            </div>
             <div class="row mb-3" style="width: 100%;font-size:16px">
               <div class="col-12 row text-color justify-content-center my-2 font-weight-bold">
                 <div class="col-4"></div>
@@ -69,7 +73,7 @@
 
               <div class="field form-group row col-12">
                 <%= f.label :lastname, t('.lastname'), class: "col-4 text-right" %>
-                <%= f.text_field :lastname, autofocus: true, autocomplete: "lastname", placeholder: "Last Name", class: "form-control col-8" %>
+                <%= f.text_field :lastname, autocomplete: "lastname", placeholder: "Last Name", class: "form-control col-8" %>
               </div>
 
               <div class="field form-group row col-12">
