--- a/app/views/users/_block_photo.html.erb
+++ b/app/views/users/_block_photo.html.erb
@@ -10,16 +10,20 @@
     <div class="row align-items-center col-12 pr-0 justify-content-between" name="info-part">
       <div class="col-auto row">
         <div class="row col-auto">
-          <button class="rounded-circle chosen border-0"><%= content.user.avatar_name%></button>
+          <% if content.user.avatar.file.nil? %>
+            <button class="rounded-circle chosen border-0"><%= content.user.avatar_name%></button>
+          <% else %>
+            <%= image_tag content.user.avatar.avatar.url, {class: "rounded-circle img-fluid"} %>
+          <% end %>
           <a href="<%= user_path(content.user.id)%>" class="btn font-size pl-1 pr-0"><%= content.user.name%></a>
         </div>
       </div>
       <div class="col-auto p-0 m-0 float-right">
         <% if current_user.id.to_i != content.user.id.to_i%>
           <% if followed(current_user.id, content.user.id)%>
-            <%= link_to "following", toggle_follow_user_path(follower_id: current_user.id, followee_id: content.user.id), {remote: true, name:"follow_#{content.user.id}", class:"btn followed py-0 px-1 btn-sm rounded-pill font-size-sm"}%>
+            <%= link_to "following", toggle_follow_user_path(follower_id: current_user.id, followee_id: content.user.id, id: current_user.id), {remote: true, name:"follow_#{content.user.id}", class:"btn followed py-0 px-1 btn-sm rounded-pill font-size-sm"}%>
           <% else %>
-            <%= link_to "follow", toggle_follow_user_path(follower_id: current_user.id, followee_id: content.user.id), {remote: true, name:"follow_#{content.user.id}", class: "btn follow py-0 px-1 btn-sm rounded-pill font-size-sm"}%>
+            <%= link_to "follow", toggle_follow_user_path(follower_id: current_user.id, followee_id: content.user.id, id: current_user.id), {remote: true, name:"follow_#{content.user.id}", class: "btn follow py-0 px-1 btn-sm rounded-pill font-size-sm"}%>
           <% end %>
         <% end %>
       </div>
@@ -27,9 +31,15 @@
     <div class="row font-weight-bold col-12" name="title-post"><%= content.title %> </div>
     <div class="row col-12" name="description-post"><%= content.description %></div>
     <div class="row justify-content-between align-items-end col-12 mr-0 pr-0">
-      <div class="col text-color font-size love">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12" fill="rgb(60, 90, 154)"><path fill-rule="evenodd" d="M7.655 14.916L8 14.25l.345.666a.752.752 0 01-.69 0zm0 0L8 14.25l.345.666.002-.001.006-.003.018-.01a7.643 7.643 0 00.31-.17 22.08 22.08 0 003.433-2.414C13.956 10.731 16 8.35 16 5.5 16 2.836 13.914 1 11.75 1 10.203 1 8.847 1.802 8 3.02 7.153 1.802 5.797 1 4.25 1 2.086 1 0 2.836 0 5.5c0 2.85 2.045 5.231 3.885 6.818a22.075 22.075 0 003.744 2.584l.018.01.006.003h.002z"></path></svg><span>  <%= content.likes_count%></span>
-      </div>
+      <%= link_to toggle_like_user_path(content_id: content.id, content_type: content_type, id: current_user.id), {name: "like_#{content.id}", remote: true} do %>
+        <div class="col text-color font-size">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12"
+          fill="<% if liked(content.id, content_type) %>rgb(60, 90, 154)<% else %>lightgrey<% end %>">
+            <path fill-rule="evenodd" d="M7.655 14.916L8 14.25l.345.666a.752.752 0 01-.69 0zm0 0L8 14.25l.345.666.002-.001.006-.003.018-.01a7.643 7.643 0 00.31-.17 22.08 22.08 0 003.433-2.414C13.956 10.731 16 8.35 16 5.5 16 2.836 13.914 1 11.75 1 10.203 1 8.847 1.802 8 3.02 7.153 1.802 5.797 1 4.25 1 2.086 1 0 2.836 0 5.5c0 2.85 2.045 5.231 3.885 6.818a22.075 22.075 0 003.744 2.584l.018.01.006.003h.002z"></path>
+          </svg>
+          <span><%= content.likes_count%></span>
+        </div>
+      <% end %>
       <div class="col-auto text-secondary font-size-sm mr-0 pr-0 text-right"><%= l content.updated_at, format: :last_update%></div>
     </div>
   </div>
