--- a/app/views/users/discover.html.erb
+++ b/app/views/users/discover.html.erb
@@ -6,7 +6,7 @@
         <%= link_to I18n.t('feed'), feed_user_path(current_user.id), {class: "btn text-secondary"}%>
       </div>
       <div class="row col ml-2">
-        <%= link_to I18n.t('discover'), discover_user_path(content: "photo", id: current_user.id), {class: "btn text-secondary"}%>
+        <%= link_to I18n.t('discover'), discover_user_path(content: "photo", id: current_user.id), {class: "btn text-color"}%>
       </div>
     </div>
     <div class="col-sm-9 col-12 p-3">
