--- a/app/views/users/discover.html.erb
+++ b/app/views/users/discover.html.erb
@@ -20,11 +20,15 @@
         <div class="row m-4 justify-content-between font-size">
           <% if @content_type == "photo"%>
             <% @content.each do |content|%>
-              <%= render partial: "block_photo", locals: {content: content, content_type: "Photo"}%>
+              <% if content.public%>
+                <%= render partial: "block_photo", locals: {content: content, content_type: "Photo"}%>
+              <% end %>
             <% end %>
           <% else %>
             <% @content.each do |content| %>
-              <%= render partial: "block_album", locals: {content: content, content_type: "Album"} %>
+              <% if content.public%>
+                <%= render partial: "block_album", locals: {content: content, content_type: "Album"} %>
+              <% end %>
             <% end %>
           <% end %>
         </div>
