update according to review code 1-4

--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -5,7 +5,7 @@
     <div class="col-sm-9 col-12 p-3">
       <div class="col bg-white pb-3 mb-5">
         <div class="font-weight-bold border-bottom py-4" style="font-size:20px;"><%= t ('.header')%></div>
-        <%= form_for @album, url: user_albums_path(user_id: params.require(:user_id)) do |f| %>
+        <%= form_for @album, url: user_albums_path do |f| %>
           <div class="row">
             <div class="col-12 col-sm px-4">
               <div class="form-group-vertical mt-4">
