--- a/app/views/users/_block_follower_tab.html.erb
+++ b/app/views/users/_block_follower_tab.html.erb
@@ -22,9 +22,9 @@
   <div class="row col justify-content-center mt-2 mb-3">
     <% if current_user.id.to_i != rendered_user.id.to_i%>
       <% if followed(current_user.id, rendered_user.id)%>
-        <%= link_to "following", toggle_follow_user_path(follower_id: current_user.id, followee_id: rendered_user.id), {remote: true, name:"follow_#{rendered_user.id}", class:"btn followed rounded-pill py-0"}%>
+        <%= link_to "following", toggle_follow_path(follower_id: current_user.id, followee_id: rendered_user.id), {remote: true, name:"follow_#{rendered_user.id}", class:"btn followed rounded-pill py-0"}%>
       <% else %>
-        <%= link_to "follow", toggle_follow_user_path(follower_id: current_user.id, followee_id: rendered_user.id), {remote: true, name:"follow_#{rendered_user.id}", class: "btn follow rounded-pill py-0"}%>
+        <%= link_to "follow", toggle_follow_path(follower_id: current_user.id, followee_id: rendered_user.id), {remote: true, name:"follow_#{rendered_user.id}", class: "btn follow rounded-pill py-0"}%>
       <% end %>
     <% end %>
   </div>
