--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,7 +35,7 @@
               </div>
 
               <div class="field form-group row col-12">
-                <%= f.label :firstname, t('.firstname'), class: "col text-right" %>
+                <%= f.label :firstname, t('.firstname'), class: "col-4 text-right" %>
                 <%= f.text_field :firstname, autofocus: true, autocomplete: "firstname", placeholder: "First Name", class: "form-control col-8" %>
               </div>
 
