--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,8 +3,8 @@
   <div class="row bg-grey">
     <%= render "shared/manage" %>
     <div class="col-sm-9 col-12 p-3">
-      <div class="col bg-white pb-3 mb-5 row" style="height:1000px">
-        <div class="" style="width: 100%">
+      <div class="col bg-white pb-3 mb-5 row">
+        <div class="col-12">
           <div class="font-weight-bold border-bottom pt-4 row" style="font-size:16px;width:100%;">
             <div class="col pr-0">First Name</div>
             <div class="col">Last Name</div>
@@ -16,6 +16,7 @@
             <%= render partial: "block_admin_user", locals: {content: content}%>
           <% end %>
         </div>
+        <%= render partial: "shared/paginate", locals: {content: @content}%>
       </div>
     </div>
     <div class="col"></div>
